--- a/src/components/Sort/Sort.css
+++ b/src/components/Sort/Sort.css
@@ -3,6 +3,7 @@
   align-items: center;
   min-width: 180px;
   width: 25%;
+  justify-content: flex-end;
 }
 
 .sort-wrapper .label {
